[package]
name = "yuque_sae"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11.12", features = ["json", "stream"] }
tokio = { version = "1.24.2", features = ["full"] }
regex = "1.7.0"
